# MailChatVisualizer

./: .gitignore  .replit  Pasted--MailChatVisualizer-flask-run-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-u-1733059713625.txt  Pasted--MailChatVisualizer-py-test-email-handler-py-Traceback-most-recent-call-last--1733097735885.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733047095672.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733052639372.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733054545473.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733055434600.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733058879388.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733059362247.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733061329355.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733099009816.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1733099667824.txt  Pasted--Serving-Flask-app-app-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it-i-1733052414588.txt  Pasted--def-check-new-emails-self-lock-name-f-e-1733338139694.txt  (+49 more)
templates/: base.html  index.html  (+1 more)
(+20 files in other folders)
