[project]
name = "repl-nix-mailchatvisualizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "redis",
    "flask-migrate",
    "celery",
    "flask-caching>=2.3.0",
    "unicodedata2>=15.1.0",
    "python-dotenv",
    "flask-cache",
    "sqlalchemy>=2.0.36",
    "imaplib2",
    "email",
    "python-dateutil",
]
